# kilo-cortex

./: .env.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: ci.yml
data/mariadb/init/: 01-schema.sql  02-seed-patterns.sql
data/redis/: redis.conf
init/: bootstrap.sh
mcp-server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
mcp-server/src/kilo_mcp_server/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
memory-api/: Dockerfile  main.py  requirements.txt
