[project]
name = "kilo-cortex-mcp"
version = "0.1.0"
description = "MCP server for Kilo Cortex memory system"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.scripts]
kilo-mcp = "kilo_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kilo_mcp_server"]

[tool.hatch.build]
include = ["src/kilo_mcp_server/**"]
